# RustTest

./: .gitignore  Cargo.toml
crates/async/: Cargo.toml
crates/rust-by-example/: Cargo.toml
crates/rust-by-example/src/: lib.rs
crates/rust-by-example/src/01_helloword/: 1_2_2_fmt_display.rs  1_2_3_fmt_display.rs  1_2_5_fmt.rs
crates/rust-by-example/src/02_primitives/: 2_0_0_primitivese copy.rs  2_2_0_tuple.rs  2_3_0_ArrayAndSlice.rs
crates/rust-by-example/src/04_VariableBindings/: 4_1_0_Mutable.rs
crates/rust-by-example/src/05_Types/: 5_1_1_Casting.rs
crates/rust-by-example/src/06_Conversion/: 6_1_1_From.rs  6_1_2_Into.rs  6_3_1_ToStringAndFromString.rs
crates/rust-by-example/src/08_FlowOfControl/: 8_2_0_Loop.rs  8_2_1_NestingAndLabels.rs  8_2_2_ReturningFromLoops.rs  8_3_1_While.rs  8_4_1_ForInAndRange.rs  8_5_1.1_MatchDestructuringForTriple.rs  8_5_1.3_MatchDestructuringForPointerAndRef.rs  8_6_1_IfLet.rs
crates/rust-by-example/src/09_Functions/: 9_0_0_Function.rs  9_1_0_Method.rs  9_2_1.2_ClosureCapture.rs  9_2_4_ClosureInputFunction.rs  9_2_6.2_ClosureStdIterFind.rs  9_4_0_DivergingFunction.rs  9_4_1_DivergingFunction.rs
crates/rust-by-example/src/10_Module/: 10_1_1_ModuleVisibility.rs  10_2_1_ModuleStructVisibility.rs  10_3_1_ModuleUse.rs  10_4_1_ModuleSuperAndSelf.rs
crates/rust-by-example/src/13_Attributes/: 13_0_1_Attributes.rs
crates/rust-by-example/src/14_Generic/: 14_1_1_Function.rs  14_2_1_Impl.rs  14_3_1_Trait.rs  14_4_1_Bound.rs  14_4_2_EmptyBound.rs  14_5_1_MultipleBound.rs  14_6_1_WhereClauses.rs  14_7_1_NewType.rs  (+2 more)
src/: main.rs
(+150 files in other folders)
